--- a/vumyky/package.json
+++ b/vumyky/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -34,5 +37,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "antd": "^5.6.1",
+    "bootstrap": "^5.3.0",
+    "css-loader": "^6.8.1",
+    "dotenv": "^16.1.4",
+    "file-loader": "^6.2.0",
+    "hooks": "^0.3.2",
+    "json-loader": "^0.5.7",
+    "react-bootstrap": "^2.7.4",
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.13.0",
+    "sass": "^1.63.4"
   }
 }
